[workspace]
members = ["gpu_tracking_app", "gpu_tracking_python", "gpu_tracking_macros", "gauss_fitting", "ffmpeg_export", "gpufit_port", "gpwgpu"]

[package]
edition = "2021"
name = "gpu_tracking"
version = "0.6.0"
[[bin]]
name = "tracking"
path = "src/main.rs"

[workspace.dependencies]
anyhow = "1.0.65"
bencher = "0.1.5"
bytemuck = { version = "1.12.1", features = ["derive"] }
futures = "0.3.24"
futures-intrusive = "0.4.0"
image = "0.24.4"
kd-tree = "0.5.1"
ndarray = "0.15.6"
ndarray-csv = "0.5.1"
noisy_float = "0.2.0"
num-traits = "0.2.15"
ordered-float = "3.2.0"
pollster = "0.2.5"
rayon = "1.5.3"
tiff = "0.7.3"
typenum = "1.15.0"
wgpu = "0.15.1"
byteorder = "1.4.3"
thiserror = "1.0.38"
regex = "1.7.1"
bitflags = "1.3.2"
ctrlc = "3.2.4"
indicatif = "0.17.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"


[dependencies]
anyhow = { workspace = true }
bencher = { workspace = true }
futures = { workspace = true }
futures-intrusive = { workspace = true }
image = { workspace = true }
kd-tree = { workspace = true }
ndarray = { workspace = true }
ndarray-csv = { workspace = true }
noisy_float = { workspace = true }
num-traits = { workspace = true }
ordered-float = { workspace = true }
pollster = { workspace = true }
rayon = { workspace = true }
tiff = { workspace = true }
typenum = { workspace = true }
wgpu = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
bitflags = { workspace = true }
ctrlc = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }

# gpwgpu = { path = "gpwgpu" }

[dependencies.clap]
features = ["derive"]
version = "4.0.6"


[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release]
# debug = true

[profile.dev]
# debug = true

