[build-system]
requires = ["maturin>=0.13,<0.15"]
build-backend = "maturin"

[project]
name = "gpu_tracking"
dependencies = ["numpy", "pandas", "tqdm"]

[tool.maturin]
python-source = "python"
# include = [{path = "python/docs", format = "sdist"}]

[project.scripts]
gpu_tracking = "gpu_tracking:run_app"
