[package]
name = "ffmpeg_export"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
ffmpeg-sys-next = { version = "6", features = ["avcodec", "avfilter", "avformat", "swresample", "swscale", "static"], default-features = false }
thiserror = "1.0.40"


